<resources>
    <string name="app_name">FootballWithFriends</string>
    <string name="app_label">Teams Generator</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="code">Code</string>
    <string name="verify">Verify</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_chats">Chats</string>
    <string name="title_stopwatch">StopWatch</string>
    <string name="titke_contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
