<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signed Out"
        android:visibility="gone"/>
    
    <RelativeLayout
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        android:id="@+id/phoneAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="IL" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneAuth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="sendCode"
        android:background="@color/colorPrimary"
        android:text="@string/send_code"
        android:textColor="#FBFBFB"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/resendBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendBtn"
        android:layout_centerHorizontal="true"
        android:onClick="resendCode"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/resend_code"
        android:textColor="#FBFBFB"
        android:textAllCaps="false"/>
    
    <EditText
        android:id="@+id/etCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resendBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="number" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:onClick="verifyCode"
        android:textColor="#FBFBFB"/>
</RelativeLayout>